[package]
version = "0.1.0"
authors = [
  "Jingyu liu <liujingyu24s@ict.ac.cn>",
]
categories = ["os", "no-std"]
edition = "2021"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
name = "riscv_vplic"
repository = "https://github.com/liulog/riscv_vplic"
description = "RISCV Virtual PLIC implementation."

[features]
default = []

[dependencies]
axaddrspace = "0.1"
axdevice_base = "0.1"
axvisor_api = "0.1"

axerrno = "0.1.0"
bitmaps = {version = "3.2", default-features = false}
log = "0.4"
spin = "0.9"

riscv-h = "0.1"